Adding window title patch

--- a/sxiv.1
+++ b/sxiv.1
@@ -387,8 +387,26 @@ Color of the window background and bar foreground
 .B foreground
 Color of the window foreground and bar background
 .TP
+.B mark
+Color of the extra border for marked thumbnails
+.TP
 .B font
 Name of Xft bar font
+.TP
+.B titlePrefix
+Any string literal to be used as the window title prefix.
+.TP
+.B titleSuffix
+The format of the window title suffix.
+
+.EX
+    Value  Format
+    0      Basename of file
+    1      Basename of directory
+    2      Full path to file
+    3      Full path to directory
+    4      Empty string
+.EE
 .TP
 Please see xrdb(1) on how to change them.
 .SH STATUS BAR
