Adding start from file patch

--- a/sxiv.1
+++ b/sxiv.1
@@ -72,6 +72,9 @@ Set the title of sxiv's X window to TITLE.
 .BI "\-n " NUM
 Start at picture number NUM.
 .TP
+.BI "\-F " FILE
+Start at picture file FILE.
+.TP
 .B \-h
 Print brief usage information to standard output and exit.
 .TP
