Adding separate bar colors patch

--- a/sxiv.1
+++ b/sxiv.1
@@ -395,6 +395,12 @@ Color of the window background and bar foreground
 .B foreground
 Color of the window foreground and bar background
 .TP
+.B barbackground
+Separate and optional color for the bar background
+.TP
+.B barforeground
+Separate and optional color for the bar foreground (text)
+.TP
 .B mark
 Color of the extra border for marked thumbnails
 .TP
